--- a/gallery.html
+++ b/gallery.html
@@ -35,6 +35,80 @@
 	</nav>
 
 
+
+	<!--- CONTENT --->
+
+	<div class="white" style="padding-top: 30px;">
+		<div class="container">
+			<div class="row">
+
+
+
+				<!--- IMAGES --->
+
+
+
+
+				<div class="col-lg-4 col-md-6 col-sm-12" style="padding: 0px;">
+					<div class="tmbnl">
+						<img src="img/bk_home.jpg">
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12" style="padding: 0px;">
+					<div class="tmbnl">
+						<img src="img/bk_home.jpg">
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12" style="padding: 0px;">
+					<div class="tmbnl">
+						<img src="img/bk_home.jpg">
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12" style="padding: 0px;">
+					<div class="tmbnl">
+						<img src="img/bk_home.jpg">
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12" style="padding: 0px;">
+					<div class="tmbnl">
+						<img src="img/bk_home.jpg">
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12" style="padding: 0px;">
+					<div class="tmbnl">
+						<img src="img/bk_home.jpg">
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12" style="padding: 0px;">
+					<div class="tmbnl">
+						<img src="img/bk_home.jpg">
+					</div>
+				</div>
+
+				<div class="col-lg-4 col-md-6 col-sm-12" style="padding: 0px;">
+					<div class="tmbnl">
+						<img src="img/bk_home.jpg">
+					</div>
+				</div>
+
+
+
+				<!--- END --->
+			</div>
+		</div>
+	</div>
+
+
+
+	<!--- END --->
+
+
     <!--- FOOTER BEGINS --->
     <footer class="black">
     	<div class="row">
