--- a/index.html
+++ b/index.html
@@ -64,14 +64,15 @@
 			
                 <span class="newnoti">New</span>
 
-                
+                > Directi Go for Gold Initiative, <a href="notification.html">click here</a> to know more
+
+                &nbsp;&nbsp;
 
 				> Subscribe to our newsletter, <a href="notification.html">click here</a> to know more
 
 				&nbsp;&nbsp;
 
-				> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer malesuada nunc vel. Donec et odio pellentesque diam volutpat commodo sed. Cras adipiscing enim eu turpis egestas pretium aenean pharetra. Convallis convallis tellus id interdum. Tellus elementum sagittis vitae et. Dictum varius duis at consectetur lorem donec massa sapien faucibus. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Iaculis urna id volutpat lacus laoreet non curabitur. Tellus cras adipiscing enim eu turpis egestas. Tortor consequat id porta nibh venenatis cras. Ipsum dolor sit amet consectetur adipiscing elit duis. Id diam vel quam elementum pulvinar etiam non. Mi proin sed libero enim. Arcu vitae elementum curabitur vitae nunc sed. Leo duis ut diam quam nulla porttitor. Lacus vestibulum sed arcu non odio. Maecenas sed enim ut sem viverra aliquet eget sit. Commodo nulla facilisi nullam vehicula ipsum a arcu. Lorem ipsum dolor sit amet consectetur adipiscing.
-			
+				> Like our facebook page Codechef NSSCE	<a href="notification.html">click here</a>		
 		</marquee>
 
 	</div>
