--- a/notification.html
+++ b/notification.html
@@ -36,36 +36,48 @@
 
 
 
-	<div class="container-fluid white">
-			<div class="container text-justify">
-			<h2 class="text-center mar"></h2>
-			<p>
-			</p>
-			</div>
-	    </div>
-    </div>
-
-
-
-	<div class="container-fluid white">
-			<div class="container text-justify">
-			<h2 class="text-center mar"></h2>
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer malesuada nunc vel. Donec et odio pellentesque diam volutpat commodo sed. Cras adipiscing enim eu turpis egestas pretium aenean pharetra. Convallis convallis tellus id interdum. Tellus elementum sagittis vitae et. Dictum varius duis at consectetur lorem donec massa sapien faucibus. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Iaculis urna id volutpat lacus laoreet non curabitur. Tellus cras adipiscing enim eu turpis egestas. Tortor consequat id porta nibh venenatis cras. Ipsum dolor sit amet consectetur adipiscing elit duis. Id diam vel quam elementum pulvinar etiam non. Mi proin sed libero enim. Arcu vitae elementum curabitur vitae nunc sed. Leo duis ut diam quam nulla porttitor. Lacus vestibulum sed arcu non odio. Maecenas sed enim ut sem viverra aliquet eget sit. Commodo nulla facilisi nullam vehicula ipsum a arcu. Lorem ipsum dolor sit amet consectetur adipiscing.
-			</p>
-			</div>
-	    </div>
-    </div>
-
-
-	<div class="container-fluid blue">
+	<div class="container-fluid blue" style="background-color: rgb(60,196,124,0.5);">
 		<div class="container text-justify ">
-		<h2 class="text-center mar" id="about"></h2>
-		<p>
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Mus mauris vitae ultricies leo integer malesuada nunc vel. Donec et odio pellentesque diam volutpat commodo sed. Cras adipiscing enim eu turpis egestas pretium aenean pharetra. Convallis convallis tellus id interdum. Tellus elementum sagittis vitae et. Dictum varius duis at consectetur lorem donec massa sapien faucibus. Adipiscing diam donec adipiscing tristique risus nec feugiat in. Iaculis urna id volutpat lacus laoreet non curabitur. Tellus cras adipiscing enim eu turpis egestas. Tortor consequat id porta nibh venenatis cras. Ipsum dolor sit amet consectetur adipiscing elit duis. Id diam vel quam elementum pulvinar etiam non. Mi proin sed libero enim. Arcu vitae elementum curabitur vitae nunc sed. Leo duis ut diam quam nulla porttitor. Lacus vestibulum sed arcu non odio. Maecenas sed enim ut sem viverra aliquet eget sit. Commodo nulla facilisi nullam vehicula ipsum a arcu. Lorem ipsum dolor sit amet consectetur adipiscing.
-		</p>
+			<h5> <span class="newnoti">New</span></h5>
+	  		<h4><u>Directi Go for Gold Initiative</u></h4>
+
+	  		<p>
+	  			<b><u>Letter from Directi CEO</u></b>
+	  			<br>
+	  			<img src="img/letter.png" class="special">
+	  			<br>	  		
+	  			Click below to know more.
+	  			<br>
+				<a href="http://www.codechef.com/goforgold"><img src="http://www.codechef.com/sites/all/themes/abessive/images/gfg_banner_180_150.png" border="0" /></a>
+			</p>
 		</div>
     </div>
+
+
+
+	
+	<div class="container-fluid white">
+		<div class="container text-justify">
+			<h4><u>Subscription</u></h4>
+			<p>
+				Subscription facility is not available at present. We are working for it, will be available soon.
+			</p>
+			</div>
+	    </div>
+    </div>
+
+
+	<div class="container-fluid blue" style="background-color: rgb(60,196,124,0.5);">
+		<div class="container text-justify ">
+	  		<h4><u>Facebook page</u></h4>
+			<p>
+				Like our facebook page Codechef NSSCE. Resent posts and events will reach you. Link given below
+			</p>
+			<p><a href="">Click here</a></p>
+		</div>
+    </div>
+
+
 
 
 
@@ -77,9 +89,9 @@
     	<div class="row">
 	    	<div class="col-12">
 	    		<ul class="list-inline">
-	    			<li><a href="#home"> HOME</a></li>
+	    			<li><a href="index.html"> HOME</a></li>
 	    			<li>|</li>
-	    			<li><a href="notification.html" style="color: green;">NOTIFICATIONS</a></li>
+	    			<li><a href="#" style="color: green;">NOTIFICATIONS</a></li>
 	    			<li>|</li>
 	    			<li><a href="gallery.html">GALLERY</a></li>
 	    		</ul>
