--- a/gallery.html
+++ b/gallery.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -40,7 +40,7 @@
 
 	<div class="white" style="padding-top: 30px;">
 		<div class="container">
-			<div class="row">
+			<div class="row container">
 
 
 
@@ -114,7 +114,7 @@
     	<div class="row">
 	    	<div class="col-12">
 	    		<ul class="list-inline">
-	    			<li><a href="#home"> HOME</a></li>
+	    			<li><a href="index.html"> HOME</a></li>
 	    			<li>|</li>
 	    			<li><a href="notification.html">NOTIFICATIONS</a></li>
 	    			<li>|</li>
