--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
 	    	</div>
 	    	<div class="col-12">
 	    		<ul class="list-inline">
-	    			<li><a href="#"><img src="img/fb.svg" class="fb"></a></li>
-	    			<li><a href="#"><img src="img/tw.svg" class="tw"></a></li>
-			        <li><a href="#"><img src="img/gp.svg" class="gp"> </a></li>
+	    			<li><a href="https://www.facebook.com/NSSCEcodechef"><img src="img/fb.svg" class="fb"></a></li>
+	    			<li><a href="https://twitter.com/NSSCEcodechef"><img src="img/tw.svg" class="tw"></a></li>
+			        <li><a href="https://plus.google.com/u/0/102500559581054584739"><img src="img/gp.svg" class="gp"> </a></li>
 			        
 	    		</ul>
 	    	</div>
