--- a/notification.html
+++ b/notification.html
@@ -73,7 +73,7 @@
 			<p>
 				Like our facebook page Codechef NSSCE. Resent posts and events will reach you. Link given below
 			</p>
-			<p><a href="">Click here</a></p>
+			<p><a href="https://www.facebook.com/NSSCEcodechef">Click here</a></p>
 		</div>
     </div>
 
