--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/img-1.jpg">
+			                    <img src="img/img-1.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -158,7 +158,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/allen.jpg">
+			                    <img src="img/allen.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -176,7 +176,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/milind.jpg">
+			                    <img src="img/milind.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -194,7 +194,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/sarang.jpg">
+			                    <img src="img/sarang.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -212,7 +212,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/img-1.jpg">
+			                    <img src="img/img-1.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -230,7 +230,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/img-1.jpg">
+			                    <img src="img/img-1.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -248,7 +248,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/img-1.jpg">
+			                    <img src="img/img-1.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -266,7 +266,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/img-1.jpg">
+			                    <img src="img/img-1.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -284,7 +284,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/img-1.jpg">
+			                    <img src="img/img-1.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -302,7 +302,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/img-1.jpg">
+			                    <img src="img/img-1.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
@@ -320,7 +320,7 @@
 			        <div class="col-md-4 col-sm-6 col-lg-3">
 			            <div class="our-team">
 			                <div class="pic">
-			                    <img src="img/rishi.jpg">
+			                    <img src="img/rishi.jpg" oncontextmenu="return false">
 			                    <ul class="social">
 			                        <li class="fbc"><a href="#"> <i class="fab fa-facebook"></i></a></li>
 			                        <li class="gpc"><a href="#"> <i class="fab fa-google-plus"></i></a></li>
